# demo-installer

./: CMakeLists.txt  main.cpp  resources.qrc
